[gd_scene load_steps=13 format=2]

[ext_resource path="res://src/Assets/fonts/ARCADE_I.TTF" type="DynamicFontData" id=1]
[ext_resource path="res://src/Assets/map/TileSet.tres" type="TileSet" id=2]
[ext_resource path="res://src/scripts/Menu.gd" type="Script" id=3]
[ext_resource path="res://src/Assets/fonts/ARCADE_N.TTF" type="DynamicFontData" id=4]
[ext_resource path="res://src/Assets/buttons/buttonPressed.png" type="Texture" id=5]
[ext_resource path="res://src/Assets/buttons/button.png" type="Texture" id=6]


[sub_resource type="ParticlesMaterial" id=1]
emission_shape = 2
emission_box_extents = Vector3( 1, 286, 1 )
flag_disable_z = true
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 300.0
orbit_velocity = 0.0
orbit_velocity_random = 0.0
scale = 5.0
scale_random = 1.0

[sub_resource type="DynamicFont" id=2]
size = 66
outline_color = Color( 0.980392, 0.980392, 0.980392, 1 )
font_data = ExtResource( 1 )

[sub_resource type="Animation" id=3]
length = 2.0
loop = true
tracks/0/type = "value"
tracks/0/path = NodePath("Label:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 1, 1.9 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Color( 0.992157, 1, 0.164706, 1 ), Color( 0.992157, 1, 0.164706, 0.14902 ), Color( 0.992157, 1, 0.164706, 1 ) ]
}

[sub_resource type="StyleBoxTexture" id=6]
texture = ExtResource( 6 )
region_rect = Rect2( 0, 0, 279, 86 )

[sub_resource type="StyleBoxTexture" id=5]
texture = ExtResource( 5 )
region_rect = Rect2( 0, 0, 279, 86 )

[sub_resource type="DynamicFont" id=4]
size = 21
extra_spacing_char = 1
font_data = ExtResource( 4 )

[node name="Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
margin_right = 733.0
margin_bottom = 817.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Particles2D" type="Particles2D" parent="."]
position = Vector2( 366.405, 798.578 )
rotation = -1.5708
amount = 170
lifetime = 2.65
process_material = SubResource( 1 )

[node name="Label" type="Label" parent="."]
modulate = Color( 0.992157, 1, 0.164706, 1 )
margin_left = 178.071
margin_top = 147.259
margin_right = 568.071
margin_bottom = 214.259
custom_fonts/font = SubResource( 2 )
text = "MAtMAN"
max_lines_visible = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
autoplay = "title"
anims/title = SubResource( 3 )

[node name="TileMap" type="TileMap" parent="."]
position = Vector2( -308.169, 0 )
scale = Vector2( 0.223, 0.223 )
tile_set = ExtResource( 2 )
cell_size = Vector2( 100, 100 )
format = 1
tile_data = PoolIntArray( 16, -2147483646, 0, 17, -536870911, 0, 18, -536870911, 0, 19, 1073741827, 0, 20, -536870911, 0, 21, -536870911, 0, 22, -536870911, 0, 23, -536870911, 0, 24, 1073741827, 0, 25, -536870911, 0, 26, -536870911, 0, 27, -536870911, 0, 28, -536870911, 0, 29, -536870911, 0, 30, -536870911, 0, 31, -536870911, 0, 32, -536870911, 0, 33, -536870911, 0, 34, -536870911, 0, 35, 1073741827, 0, 36, -536870911, 0, 37, -536870911, 0, 38, -536870911, 0, 39, -536870911, 0, 40, 1073741827, 0, 41, -536870911, 0, 42, -536870911, 0, 43, 536870914, 0, 65552, 1073741825, 0, 65555, 1073741825, 0, 65560, 1073741825, 0, 65571, 1073741825, 0, 65576, 1073741825, 0, 65579, 1073741825, 0, 131088, 1073741825, 0, 131091, 1073741825, 0, 131096, 1073741825, 0, 131107, 1073741825, 0, 131112, 1073741825, 0, 131115, 1073741825, 0, 196624, 1073741825, 0, 196627, 1073741825, 0, 196632, 1073741825, 0, 196643, 1073741825, 0, 196648, 1073741825, 0, 196651, 1073741825, 0, 262160, 1073741825, 0, 262163, -536870909, 0, 262164, -536870911, 0, 262165, -536870911, 0, 262166, -536870911, 0, 262167, -536870911, 0, 262168, -536870910, 0, 262179, 1073741826, 0, 262180, -536870911, 0, 262181, -536870911, 0, 262182, -536870911, 0, 262183, -536870911, 0, 262184, -2147483645, 0, 262187, 1073741825, 0, 327696, 1073741825, 0, 327699, 1073741825, 0, 327720, 1073741825, 0, 327723, 1073741825, 0, 393232, 1073741825, 0, 393235, 1073741825, 0, 393256, 1073741825, 0, 393259, 1073741825, 0, 458768, 1073741825, 0, 458771, 1073741825, 0, 458792, 1073741825, 0, 458795, 1073741825, 0, 524304, 1073741825, 0, 524307, 1073741825, 0, 524328, 1073741825, 0, 524331, 1073741825, 0, 589840, 1073741825, 0, 589843, 1073741825, 0, 589864, 1073741825, 0, 589867, 1073741825, 0, 655376, 1073741825, 0, 655379, 1073741825, 0, 655400, 1073741825, 0, 655403, 1073741825, 0, 720912, 1073741825, 0, 720915, 1073741825, 0, 720936, 1073741825, 0, 720939, 1073741825, 0, 786448, 1073741825, 0, 786451, 1073741825, 0, 786472, 1073741825, 0, 786475, 1073741825, 0, 851984, 1073741825, 0, 851987, 1073741825, 0, 852008, 1073741825, 0, 852011, 1073741825, 0, 917520, 1073741825, 0, 917523, 1073741825, 0, 917544, 1073741825, 0, 917547, 1073741825, 0, 983056, 1073741825, 0, 983059, 1073741825, 0, 983080, 1073741825, 0, 983083, 1073741825, 0, 1048592, 1073741825, 0, 1048595, 1073741825, 0, 1048616, 1073741825, 0, 1048619, 1073741825, 0, 1114128, 1073741825, 0, 1114131, 1073741825, 0, 1114152, 1073741825, 0, 1114155, 1073741825, 0, 1179664, 1073741825, 0, 1179667, 1073741825, 0, 1179688, 1073741825, 0, 1179691, 1073741825, 0, 1245200, 1073741825, 0, 1245203, 1073741825, 0, 1245224, 1073741825, 0, 1245227, 1073741825, 0, 1310736, 1073741825, 0, 1310739, 1073741825, 0, 1310760, 1073741825, 0, 1310763, 1073741825, 0, 1376272, 1073741825, 0, 1376275, 1073741825, 0, 1376296, 1073741825, 0, 1376299, 1073741825, 0, 1441808, 1073741825, 0, 1441811, 1073741825, 0, 1441832, 1073741825, 0, 1441835, 1073741825, 0, 1507344, 1073741825, 0, 1507347, 1073741825, 0, 1507368, 1073741825, 0, 1507371, 1073741825, 0, 1572880, 1073741825, 0, 1572883, 1073741825, 0, 1572904, 1073741825, 0, 1572907, 1073741825, 0, 1638416, 1073741825, 0, 1638419, 1073741825, 0, 1638440, 1073741825, 0, 1638443, 1073741825, 0, 1703952, 1073741825, 0, 1703955, 1073741825, 0, 1703976, 1073741825, 0, 1703979, 1073741825, 0, 1769488, 1073741825, 0, 1769491, 1073741825, 0, 1769512, 1073741825, 0, 1769515, 1073741825, 0, 1835024, 1073741825, 0, 1835027, 1073741825, 0, 1835048, 1073741825, 0, 1835051, 1073741825, 0, 1900560, 1073741825, 0, 1900563, 1073741825, 0, 1900584, 1073741825, 0, 1900587, 1073741825, 0, 1966096, 1073741825, 0, 1966099, 1073741825, 0, 1966120, 1073741825, 0, 1966123, 1073741825, 0, 2031632, 1073741825, 0, 2031635, -536870909, 0, 2031636, -536870911, 0, 2031637, -536870911, 0, 2031638, -536870911, 0, 2031639, -536870911, 0, 2031640, 1073741827, 0, 2031641, -536870911, 0, 2031642, -536870911, 0, 2031643, -536870911, 0, 2031644, -536870911, 0, 2031645, -536870911, 0, 2031646, -536870911, 0, 2031647, -536870911, 0, 2031648, -536870911, 0, 2031649, -536870911, 0, 2031650, -536870911, 0, 2031651, 1073741827, 0, 2031652, -536870911, 0, 2031653, -536870911, 0, 2031654, -536870911, 0, 2031655, -536870911, 0, 2031656, -2147483645, 0, 2031659, 1073741825, 0, 2097168, 1073741825, 0, 2097171, 1073741825, 0, 2097176, 536870913, 0, 2097187, 536870913, 0, 2097192, 1073741825, 0, 2097195, 1073741825, 0, 2162704, 1073741825, 0, 2162707, 1073741825, 0, 2162712, 536870913, 0, 2162723, 536870913, 0, 2162728, 1073741825, 0, 2162731, 1073741825, 0, 2228240, 1073741825, 0, 2228243, 1073741825, 0, 2228248, 536870913, 0, 2228259, 536870913, 0, 2228264, 1073741825, 0, 2228267, 1073741825, 0, 2293776, 1073741826, 0, 2293777, -536870911, 0, 2293778, -536870911, 0, 2293779, 536870915, 0, 2293780, -536870911, 0, 2293781, -536870911, 0, 2293782, -536870911, 0, 2293783, -536870911, 0, 2293784, 536870915, 0, 2293785, -536870911, 0, 2293786, -536870911, 0, 2293787, -536870911, 0, 2293788, -536870911, 0, 2293789, -536870911, 0, 2293790, -536870911, 0, 2293791, -536870911, 0, 2293792, -536870911, 0, 2293793, -536870911, 0, 2293794, -536870911, 0, 2293795, 536870915, 0, 2293796, -536870911, 0, 2293797, -536870911, 0, 2293798, -536870911, 0, 2293799, -536870911, 0, 2293800, 536870915, 0, 2293801, -536870911, 0, 2293802, -536870911, 0, 2293803, -536870910, 0 )

[node name="Buttons" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Play" type="Button" parent="Buttons"]
margin_left = 287.253
margin_top = 309.656
margin_right = 440.253
margin_bottom = 356.656
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Exit" type="Button" parent="Buttons"]
margin_left = 287.253
margin_top = 405.656
margin_right = 440.253
margin_bottom = 452.656
focus_mode = 0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 5 )
custom_styles/normal = SubResource( 6 )
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Sair"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Options" type="Button" parent="Buttons"]
visible = false
margin_left = 287.253
margin_top = 381.656
margin_right = 440.253
margin_bottom = 428.656
disabled = true
text = "Opcoes"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buttons/Play" to="." method="_on_Play_pressed"]
[connection signal="pressed" from="Buttons/Exit" to="." method="_on_Exit_pressed"]
[connection signal="pressed" from="Buttons/Options" to="." method="_on_Options_pressed"]
